# spore

./: .gitignore  README.md  arena.py  attractor.py  bdd_launcher.py  bddcython_launcher.py  comparison.py  create_parity_automata.sh  generalizedRecursive.py  generate_every_automaton.sh  gpg2bdd.py  partialSolverBDD.py  pg2bdd.py  regular_launcher.py  regularcython_launcher.py  requirements.txt  run_for_benchmark.py  setup.cfg  setup.py  spore.py  spore_LTL_toolchain.sh  spore_full_bdd.py  spore_ltl_toolchain.sh  tool.sh  tools.py
arenas/gpg/: example_1.gpg  example_2.gpg  example_3.gpg  example_3_pg.gpg  example_4.gpg  example_4_pg.gpg  example_5.gpg  example_6_pg.gpg
arenas/pg/: example_1.pg  example_2.pg  example_4.pg
bdd/: arena.py  attractor.py  bdd_util.py  buchiSolver.py  dpa2bdd.py  dpa2gpg.py  generalizedBuchiSolver.py  generalizedRecursive.py  gpg2bdd.py  misc.py  pg2bdd.py  recursive.py
bdd/test/: testArena.py  testFullBDD.py  testGeneralizedRecursive.py
bddcython/: arena.pyx  generalizedRecursive.pyx  gpg2bdd.pyx
bddcython/test/: testArena.py
csv/: performanceComparator.py
cython/: arena.pxd  attractor.pyx  generalizedRecursive.pxd  generalizedRecursive.pyx
regular/: __init__.py  arena.py  attractor.py  buchiSolver.py  generalizedBuchiSolver.py  generalizedRecursive.py  gpg2arena.py  pg2arena.py  recursive.py
regular/test/: testArena.py  testGeneralizedRecursive.py
regularcython/: arena.pyx  attractor.pyx  generalizedRecursive.pyx
scripts/: benchmarks.sh  create_parity_automata.sh  create_parity_automata_nodecomp.sh  generate_every_automaton.sh  spore_LTL_toolchain.sh  spore_LTL_toolchain_fbdd.sh
starexec_configs/: starexec_run_ltl-real-recpar-bdd-seq  starexec_run_ltl-real-recpar-fbdd-32-nodecomp-seq  starexec_run_ltl-real-recpar-fbdd-32-seq  starexec_run_ltl-real-recpar-fbdd-64-nodecomp-seq  starexec_run_ltl-real-recpar-fbdd-64-seq
synttool/bdd/: attractor.py  generalizedRecursive.py  gpg2bdd.py  misc.py  (+1 more)
test/: testArena.py  testGeneralizedRecursive.py
(+32 files in other folders)
