[metadata]
name = synttool
version = 0.0.1
author = Clément Tamines
author_email = clement.tamines@umons.ac.be
maintainer = Gaëtan Staquet
maintainer_email = gaetan.staquet@umons.ac.be
classifiers =
    Programming Language :: Python :: 2.7
keywords =
    LTL
    Synthesis
    Game theory

[options]
include_package_data = True
packages = find:
install_requires =
    cython
    importlib; python_version == "2.7"

[options.extras_require]
dev = cython

[cython-module: synttool.regular.cython]
sources =
    synttool/regular/cython/arena.pyx
    synttool/regular/cython/attractor.pyx
    synttool/regular/cython/generalizedRecursive.pyx
    synttool/regular/cython/gpg2arena.pyx

[bdist_wheel]
universal = 1